<resources>
    <string name="app_name">Stay Home</string>
    <string name="hello">Hello my friend!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember Me</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="error_empty">The value is required</string>
    <string name="error_empty_variable">The value %s is required</string>
    <string name="error_invalid_login">Username or password incorrect</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="error_invalid_phone">Invalid Phone</string>
</resources>
